fix: fonts too large

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@ body {
   word-wrap: break-word;
   overflow-wrap: break-word;
   color: rgb(var(--gray-dark));
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.7;
   display: flex;
   flex-direction: column;
